# libmpv-android

./: .gitignore  LICENSE  gradlew
buildscripts/: build.sh  bundle_default.sh
buildscripts/include/: depinfo.sh  download-deps.sh  download-sdk.sh  path.sh
buildscripts/patches/ffmpeg/: mediacodec.patch
buildscripts/patches/mpv/: mpv_lavc_set_java_vm.patch
buildscripts/scripts/: ffmpeg.sh  lcms2.sh  libbluray.sh  libdvdnav.sh  libdvdread.sh  libplacebo.sh  libxml2.sh  lua.sh  mpv-android.sh  mpv.sh  mpvshaderc.sh  sentry-native.sh  shaderc.sh  spirv_cross.sh  spirv_headers.sh  spirv_tools.sh  uchardet.sh  vapoursynth.sh  zimg.sh
libmpv/: build.gradle.kts
libmpv/src/main/cpp/: CMakeLists.txt  media_kit_native_event_loop.h
